--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>David Eisenbarth</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/assets/img/logo-default.png">
+  <html lang="de" translate="no">
+  <meta name="google" content="notranslate">
 
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
